--- a/infoAlumnos.html
+++ b/infoAlumnos.html
@@ -102,24 +102,24 @@
     }
   </script>
 </article>
-
+<!-- 
 <div class="carousel-frame">
     <ul>
-        <li><a href="https://www.mercadolibre.com.ar/ofertas" target="_blank"> <img src="imagenes/MeLi1.webp"
+        <li><a href="https://www.mercadolibre.com.ar/ofertas" target="_blank"> <img src="./imagenes/MeLi1.webp"
                     alt="Imagen 1">
             </a></li>
-        <li><a href="https://www.mercadolibre.com.ar/c/ropa-y-accesorios" target="_blank"> <img src="imagenes/MeLi2.webp"
+        <li><a href="https://www.mercadolibre.com.ar/c/ropa-y-accesorios" target="_blank"> <img src="./imagenes/MeLi2.webp"
                     alt="Imagen 2">
             </a></li>
-        <li><a href="https://www.mercadolibre.com.ar/c/celulares-y-telefonos" target="_blank"> <img src="imagenes/MeLi3.webp"
+        <li><a href="https://www.mercadolibre.com.ar/c/celulares-y-telefonos" target="_blank"> <img src="./imagenes/MeLi3.webp"
                     alt="Imagen 3">
             </a></li>
-        <li><a href="https://www.mercadolibre.com.ar/c/belleza-y-cuidado-personal" target="_blank"> <img src="imagenes/MeLi4.webp"
+        <li><a href="https://www.mercadolibre.com.ar/c/belleza-y-cuidado-personal" target="_blank"> <img src="./imagenes/MeLi4.webp"
                     alt="Imagen 4">
             </a></li>
     </ul>
     
-</div>
+</div> -->
 
 <footer class="footer">
 
