--- a/infoAlumnos.html
+++ b/infoAlumnos.html
@@ -67,7 +67,11 @@
 
     
     // Obtener la información del alumno seleccionado
-    function getAlumnoInfo(ID_Alumno) {
+    function getAlumnoInfo() {
+
+    const select = document.getElementById('alumno-select');
+    const ID_Alumno = select.value;
+
       var alumnoDetails = document.getElementById('alumno-details');
       alumnoDetails.innerHTML = '';
       
