--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@ crossorigin="anonymous">
         <nav class="navbar">
             <li><a href="./templates/personas.html">Listado de alumnos</a></li>
             <li><a href="./templates/persona_nueva.html">Agregar alumno</a></li>
-            <li><a href="./templates/persona_update.html">Modificar alumno</a></li>
+            <li><a href="./infoAlumnos.html">Información de Alumnos</a></li>
         </nav>
     </div>
 
