--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@ crossorigin="anonymous">
 
 <main>
 <div id="app" class="article">
-<h1>Personas</h1>
+<h1>Gestión de Alumnos</h1>
 <br>
 <a class="btn btn-primary" href="./templates/persona_nueva.html">Nuevo</a>
 <br><br>
