--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@ crossorigin="anonymous">
     <a href="https://www.instagram.com" target="_blank"><i class='bx bxl-instagram bx-lg' style='color:#c18d2c'></i></a>
     <a href="https://wa.me/5491150459292?text=%C2%A1Hola!%20Quiero%20saber%20m%C3%A1s%20sobre%20las%20clases%20online" target="_blank"><i class='bx bxl-whatsapp bx-lg' style='color:#16d41b'></i></a>
     <a href="https://www.discord.com" target="_blank"><i class='bx bxl-discord-alt bx-lg' style='color:#161dd4'></i></a>
-    <br><br>
-    Todos los derechos reservados
+<!--     <br><br>
+    Todos los derechos reservados -->
 </footer>
 
 </body>
